# TDA-Information-Dynamics

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release_notes.md
paper/: TDA_Information_Dynamics_Paper.tex
src/: lib.rs
src/cusum/: detector.rs  mod.rs
src/information/: entropy.rs  landscape.rs  mod.rs
src/systems/: brusselator.rs  fitzhugh_nagumo.rs  kuramoto.rs  lennard_jones.rs  mod.rs  traits.rs  xy_model.rs
src/topology/: betti.rs  mod.rs  persistence.rs  persistence_exact.rs  vietoris_rips.rs
